--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Kotlin_geek</string>
+    <string name="text_note">Koltin is bset</string>
+    <string name="body_note">Я Kotlin бы выучил только за то, что на нем разрабатывал Вортон!</string>
 </resources>
