--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Kotlin_geek</string>
     <string name="text_note">Koltin is bset</string>
     <string name="body_note">Я Kotlin бы выучил только за то, что на нем разрабатывал Вортон!</string>
+    <string name="title_create_note">Заголовок</string>
+    <string name="body_note_text">Текст заметки</string>
 </resources>
