--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="delete">Delete</string>
     <string name="add_note">Add note</string>
     <string name="save_hint">Save note</string>
+    <string name="exit">Log out</string>
+    <string name="logout_dialog_title">Выйти из аккаунта?</string>
+    <string name="logout_dialog_message">Все ваши заметки будут сохранены. Вы сможете получить к ним доступ после авторизации.</string>
+    <string name="logout_dialog_cancel">Cancel</string>
 </resources>
