--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="logout_dialog_title">Выйти из аккаунта?</string>
     <string name="logout_dialog_message">Все ваши заметки будут сохранены. Вы сможете получить к ним доступ после авторизации.</string>
     <string name="logout_dialog_cancel">Cancel</string>
+    <string name="palette">Palette</string>
 </resources>
